erDiagram
    User {
        String id PK
        String email UK
        String password
        String nama
        Role role
        Boolean isActive
        DateTime createdAt
        DateTime updatedAt
    }

    SuratMasuk {
        String id PK
        String nomorSurat
        DateTime tanggalSurat
        DateTime tanggalDiterima
        String pengirim
        String perihal
        SifatSurat jenisSurat
        StatusSurat status
        String tujuan
        String fileUrl
        String keterangan
        Boolean isLengkap
        DateTime createdAt
        DateTime updatedAt
        String createdById FK
    }

    SuratKeluar {
        String id PK
        String nomorSurat
        String nomorSuratAdmin
        DateTime tanggalSurat
        String tujuan
        String perihal
        String kodeArea
        StatusSurat status
        String isiSurat
        String fileUrl
        String finalFileUrl
        Boolean isSigned
        DateTime signedAt
        DateTime createdAt
        DateTime updatedAt
        String createdById FK
        String jenisSuratId FK
        String suratMasukId FK
    }

    Disposisi {
        String id PK
        String instruksi
        String catatan
        StatusDisposisi status
        DateTime tanggalDisposisi
        DateTime tanggalSelesai
        Boolean isRequestLampiran
        DateTime createdAt
        DateTime updatedAt
        String fromUserId FK
        String toUserId FK
        String suratMasukId FK
        String suratKeluarId FK
    }

    Lampiran {
        String id PK
        String fileUrl
        String filePublicId
        String fileName
        String fileType
        DateTime uploadedAt
        String uploadedById FK
        String suratMasukId FK
        String suratKeluarId FK
    }

    TrackingSurat {
        String id PK
        DateTime timestamp
        String aksi
        String keterangan
        String userId FK
        String suratMasukId FK
        String suratKeluarId FK
    }

    JenisSurat {
        String id PK
        String kode UK
        String nama
        String format
        DateTime createdAt
        DateTime updatedAt
    }

    KodeBagian {
        String id PK
        String role UK
        String kodeInternal
        String kodeEksternal
        String namaBagian
    }

    KodeArea {
        String id PK
        String kode UK
        String nama
    }

    NomorSuratCounter {
        String id PK
        Int tahun
        String kodeBagian
        Int counter
    }

    User ||--o{ SuratMasuk : "creates"
    User ||--o{ SuratKeluar : "creates"
    User ||--o{ Disposisi : "sends"
    User ||--o{ Disposisi : "receives"
    User ||--o{ Lampiran : "uploads"
    User ||--o{ TrackingSurat : "performs"

    SuratMasuk ||--o{ Disposisi : "has"
    SuratMasuk ||--o{ Lampiran : "has"
    SuratMasuk ||--o{ TrackingSurat : "has"
    SuratMasuk ||--o| SuratKeluar : "replied by"

    SuratKeluar ||--o{ Disposisi : "has"
    SuratKeluar ||--o{ Lampiran : "has"
    SuratKeluar ||--o{ TrackingSurat : "has"
    SuratKeluar }o--|| JenisSurat : "has type"
